[package]
name = "Clarity_TagFlow"
version = "0.3.0"
edition = "2024"

[dependencies]
# "persistence" enables eframe's storage (saves settings to the OS data dir).
eframe = { version = "0.34.2", features = ["persistence"] }
serde = { version = "1", features = ["derive"] }
image = { version = "0.25.10", features = ["png", "jpeg", "gif", "bmp", "webp", "ico", "tiff", "hdr"] }
rfd = "0.17.2"
sysinfo = "0.39.2"
egui_extras = { version = "0.34.3", features = ["svg"] }
chrono = { version = "0.4.44", default-features = false, features = ["clock", "std"] }
jpeg-decoder = { version = "0.3.2", default-features = false }
png = "0.18.1"
tiff = "0.11.3"
# Reading embedded Stable-Diffusion generation metadata (src/sd_metadata.rs):
# flate2 inflates PNG zTXt text chunks; serde_json parses ComfyUI node graphs.
flate2 = "1"
serde_json = "1"
# libwebp (C) for reduced-resolution WebP decode — image-webp (pure Rust) can't scale.
libwebp-sys = "0.14.4"
# HTTP client for the AI Model Manager downloads. native-tls => Windows SChannel,
# so no extra build toolchain (avoids rustls/ring needing nasm on MSVC).
ureq = { version = "3.3.0", default-features = false, features = ["native-tls"] }
native-tls = "0.2.18"
# ONNX Runtime bindings for AI tagging inference. download-binaries (default)
# fetches a prebuilt ORT at build time; copy-dylibs stages the DLL next to the exe.
ort = "2.0.0-rc.12"
# Per-user data dir for downloaded models (writable even when installed read-only).
dirs = "6.0.0"
# Embedded VLC playback — needs the VLC SDK + VLC_LIB_DIR (see .cargo/config.toml).
vlc-rs = { version = "0.3.0", optional = true }
zip = { version = "8.6.0", default-features = false, features = ["deflate", "aes-crypto"] }
# Pure-Rust AVIF decode (no C deps): avif-parse pulls the AV1 frame out of the
# container, rav1d (a Rust port of dav1d) decodes it to YUV. Optional — only the
# `avif` feature pulls them in. `asm` is left off so no nasm toolchain is needed.
avif-parse = { version = "2.1.0", optional = true }
rav1d = { version = "1.1.0", optional = true, default-features = false, features = ["bitdepth_8", "bitdepth_16"] }
# Pure-Rust HEIC/HEIF decode (no C deps, forbids unsafe). Optional — pulled in by
# the `avif` feature alongside the AVIF decoder, since both are "extended formats".
heic = { version = "0.1.6", optional = true }
# Pure-Rust camera-raw (DNG) decode: zenraw wraps rawloader and runs a full
# develop pipeline to sRGB. Pure Rust, and (unlike imagepipe) it's on image 0.25
# so there's no version clash. `enough` supplies its cancellation-signal type
# (`Unstoppable`). Both optional, behind `avif`.
zenraw = { version = "0.2.0", optional = true }
enough = { version = "0.4.4", optional = true }
# Inline color-emoji rendering (src/emoji.rs): twemoji-assets bundles the Twemoji
# SVGs as static data (egui's text rasterizer can't draw color emoji from a font),
# unicode-segmentation splits text into grapheme clusters so multi-codepoint emoji
# are matched whole. We render emoji ourselves rather than via the `egui-twemoji`
# crate, which is pinned to an older egui and won't build against ours.
twemoji-assets = { version = "1.4.0", default-features = false, features = ["svg"] }
unicode-segmentation = "1.13.3"
# Image-capable clipboard (egui's own clipboard is text-only) for the viewer's
# "Copy image" right-click action. Already in the tree via eframe, so pinning it
# here as a direct dep adds no extra build cost.
arboard = "3.6.1"

[build-dependencies]
# Embeds the Windows app icon (and version info) into the exe at build time.
winresource = "0.1.31"

[features]
# In-app video playback + poster thumbnails via libVLC, on by default so a plain
# `cargo run` (and the IDE's Run button) play videos embedded. Build with
# `--no-default-features` to drop the VLC SDK requirement; videos then show a
# "couldn't start playback" notice instead.
default = ["vlc", "avif"]
vlc = ["dep:vlc-rs"]
# Pure-Rust AVIF decoding via avif-parse + rav1d (no C library / nasm needed).
# Off by default to keep compile times down. Build with `--features avif`; the
# in-app "extended formats" setting then turns .avif recognition on.
avif = ["dep:avif-parse", "dep:rav1d", "dep:heic", "dep:zenraw", "dep:enough"]
