[package]
name = "Clarity_TagFlow"
version = "5.3.4"
edition = "2024"
license = "MIT"

[dependencies]
# "persistence" enables eframe's storage (saves settings to the OS data dir).
# "glow" enables the OpenGL backend: eframe 0.34 defaults to wgpu, but the
# Pixal3D 3D viewer (src/scene3d.rs) renders via three-d, which needs an OpenGL
# context — so we select the glow renderer in NativeOptions. wgpu stays compiled
# but unused.
eframe = { version = "0.34.2", features = ["persistence", "glow"] }
serde = { version = "1", features = ["derive"] }
image = { version = "0.25.10", features = ["png", "jpeg", "gif", "bmp", "webp", "ico", "tiff", "hdr"] }
rfd = "0.17.2"
sysinfo = "0.39.2"
egui_extras = { version = "0.34.3", features = ["svg"] }
chrono = { version = "0.4.44", default-features = false, features = ["clock", "std"] }
jpeg-decoder = { version = "0.3.2", default-features = false }
png = "0.18.1"
tiff = "0.11.3"
# Reading embedded Stable-Diffusion generation metadata (src/sd_metadata.rs):
# flate2 inflates PNG zTXt text chunks; serde_json parses ComfyUI node graphs;
# memchr does the fast substring search of the raw byte scan (a naive scan took
# ~1s on a 14 MB image). Already in the tree via image/regex, so no extra cost.
flate2 = "1"
serde_json = "1"
memchr = "2"
# libwebp (C) for reduced-resolution WebP decode — image-webp (pure Rust) can't scale.
libwebp-sys = "0.14.4"
# HTTP client for the AI Model Manager downloads. native-tls => Windows SChannel,
# so no extra build toolchain (avoids rustls/ring needing nasm on MSVC).
ureq = { version = "3.3.0", default-features = false, features = ["native-tls"] }
native-tls = "0.2.18"
# FTP/FTPS client for the remote-folder browser (Settings → FTP/FTPS). Sync API,
# run on background threads; native-tls => Windows SChannel, same as ureq above.
suppaftp = { version = "10", default-features = false, features = ["native-tls"] }
# ONNX Runtime bindings for AI tagging inference. download-binaries (default)
# fetches a prebuilt ORT at build time; copy-dylibs stages the DLL next to the exe.
ort = "2.0.0-rc.12"
# Per-user data dir for downloaded models (writable even when installed read-only).
dirs = "6.0.0"
# Embedded VLC playback — needs the VLC SDK + VLC_LIB_DIR (see .cargo/config.toml).
vlc-rs = { version = "0.3.0", optional = true }
zip = { version = "8.6.0", default-features = false, features = ["deflate", "aes-crypto"] }
# Pure-Rust AVIF decode (no C deps): avif-parse pulls the AV1 frame out of the
# container, rav1d (a Rust port of dav1d) decodes it to YUV. Optional — only the
# `avif` feature pulls them in. `asm` is left off so no nasm toolchain is needed.
avif-parse = { version = "2.1.0", optional = true }
rav1d = { version = "1.1.0", optional = true, default-features = false, features = ["bitdepth_8", "bitdepth_16"] }
# Pure-Rust HEIC/HEIF decode (no C deps, forbids unsafe). Optional — pulled in by
# the `avif` feature alongside the AVIF decoder, since both are "extended formats".
heic = { version = "0.1.6", optional = true }
# Pure-Rust camera-raw (DNG) decode: zenraw wraps rawloader and runs a full
# develop pipeline to sRGB. Pure Rust, and (unlike imagepipe) it's on image 0.25
# so there's no version clash. `enough` supplies its cancellation-signal type
# (`Unstoppable`). Both optional, behind `avif`.
zenraw = { version = "0.2.0", optional = true }
enough = { version = "0.4.4", optional = true }
# Inline color-emoji rendering (src/emoji.rs): twemoji-assets bundles the Twemoji
# SVGs as static data (egui's text rasterizer can't draw color emoji from a font),
# unicode-segmentation splits text into grapheme clusters so multi-codepoint emoji
# are matched whole. We render emoji ourselves rather than via the `egui-twemoji`
# crate, which is pinned to an older egui and won't build against ours.
twemoji-assets = { version = "1.4.0", default-features = false, features = ["svg"] }
unicode-segmentation = "1.13.3"
# Image-capable clipboard (egui's own clipboard is text-only) for the viewer's
# "Copy image" right-click action. Already in the tree via eframe, so pinning it
# here as a direct dep adds no extra build cost.
arboard = "3.6.1"
# Local LLM for the AI Model tab (src/llm.rs): llama.cpp bindings running the
# Gemma 4 vision model fully in-process (no server). The `mtmd` feature adds
# llama.cpp's multimodal pipeline (image input via the mmproj projector).
# Compiles llama.cpp from source at build time — needs cmake + a C++ toolchain
# (VS 2022's bundled CMake works; GitHub runners ship cmake preinstalled).
llama-cpp-2 = { version = "0.1.150", features = ["mtmd"], optional = true }
# Streaming UTF-8 decode for the LLM's token stream — a token can end mid-way
# through a multi-byte character (CJK, emoji), so bytes carry over pieces.
encoding_rs = { version = "0.8", optional = true }
# Renders the AI chat's replies as real markdown — bold, bullet lists,
# headings, code blocks — instead of raw **asterisks** (src/ai_chat.rs).
# 0.23 pairs with egui 0.34 (0.24 needs egui 0.35, newer than eframe here).
egui_commonmark = "0.23"

# "Copy image" appends the legacy CF_DIB clipboard format after arboard's
# PNG/DIBV5 — Chromium-based browsers only ever request CF_DIB when pasting an
# image, so without it Chrome/Edge paste nothing. Already in the tree as
# arboard's Windows backend, so this adds no build cost.
[target.'cfg(windows)'.dependencies]
clipboard-win = "5.4"

# Interactive 3D viewer for Pixal3D's generated GLB models (src/scene3d.rs),
# shown in the centre panel. Renders into eframe's existing glow (OpenGL) context
# via an egui paint callback. three-d 0.19 pins glow 0.17 + egui_glow 0.34 — the
# same versions eframe 0.34 uses — so the GL context type unifies. GLB/glTF
# loading lives in three-d-asset (gltf feature); png/jpeg decode embedded
# textures. Linux/Windows only, matching Pixal3D (NVIDIA-only, compiled out on
# macOS), so mac builds don't pull this in.
[target.'cfg(not(target_os = "macos"))'.dependencies]
three-d = { version = "0.19", default-features = false }
three-d-asset = { version = "0.10", default-features = false, features = ["gltf", "png", "jpeg"] }
# Paint-callback type (CallbackFn) + raw GL access for rendering three-d into
# eframe's context. Pinned to the same versions eframe 0.34 already uses.
egui_glow = "0.34"
glow = "0.17"

# Optimize llama.cpp's Rust shim even in dev (the C++ itself is always a
# cmake Release build); mainly this keeps token streaming snappy in dev runs.
[profile.dev.package.llama-cpp-sys-2]
opt-level = 3
debug = false

# llama-cpp-sys-2's build.rs links the DEBUG CRT (msvcrtd) on top of the
# release CRT whenever the build script itself has debug_assertions on — two
# C runtimes in one process, which trips a heap-check break (0x80000003)
# inside the multimodal init on dev builds. The link is gated on
# cfg!(debug_assertions) in the build script, so turn that off for build
# scripts in dev. (Release builds never linked it and are unaffected.)
[profile.dev.build-override]
debug-assertions = false

# Vendored, lightly patched copies of egui_commonmark (+ its backend) for the
# AI chat's markdown replies — the edits are tagged PATCH(Clarity TagFlow):
#  * backend: the code-block copy button draws the app's copy/copied SVGs
#    instead of the 🗐/✔ text glyphs.
#  * viewer: text runs render color emoji as inline Twemoji SVG images
#    (egui fonts are monochrome-only).
[patch.crates-io]
egui_commonmark = { path = "vendor/egui_commonmark" }
egui_commonmark_backend = { path = "vendor/egui_commonmark_backend" }

[build-dependencies]
# Embeds the Windows app icon (and version info) into the exe at build time.
winresource = "0.1.31"

[features]
# In-app video playback + poster thumbnails via libVLC, on by default so a plain
# `cargo run` (and the IDE's Run button) play videos embedded. Build with
# `--no-default-features` to drop the VLC SDK requirement; videos then show a
# "couldn't start playback" notice instead.
default = ["vlc", "avif", "llm"]
vlc = ["dep:vlc-rs"]
# The local AI model (Settings → AI Model): Gemma 4 vision via llama.cpp.
# On by default; build with --no-default-features (or without this feature) to
# skip the C++ compile — the tab then shows a "built without AI" notice.
llm = ["dep:llama-cpp-2", "dep:encoding_rs"]
# GPU-accelerated local AI: compiles llama.cpp's Vulkan backend in addition to
# CPU. Off by default because building needs the Vulkan SDK (VULKAN_SDK env +
# glslc) and the exe then links vulkan-1.dll (ships with GPU drivers; absent
# on some GPU-less VMs). The worker offloads all layers to the GPU
# automatically when the backend is present.
#
# Windows: build with scripts\build-vulkan.cmd. Two gotchas make a plain
# `cargo build --features llm-vulkan` fail there: (1) the Visual Studio cmake
# generator runs llama.cpp's nested vulkan-shaders-gen steps out of order
# (needs the Ninja generator in a VS dev env), and (2) the nested build paths
# blow past MAX_PATH under target\ (needs a short CARGO_TARGET_DIR, C:\ctf).
llm-vulkan = ["llm", "llama-cpp-2/vulkan"]
# Pure-Rust AVIF decoding via avif-parse + rav1d (no C library / nasm needed).
# Off by default to keep compile times down. Build with `--features avif`; the
# in-app "extended formats" setting then turns .avif recognition on.
avif = ["dep:avif-parse", "dep:rav1d", "dep:heic", "dep:zenraw", "dep:enough"]
